completed the lesson 14.12.2024
